# dash-ui-kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  WORKFLOWS.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  docs.yml  test.yml
dash_ui_kit/: __init__.py  __version__.py
dash_ui_kit/assets/: base.css  components.css  core.css  core.min.css  reset.css  variables.css
dash_ui_kit/assets/themes/: dark.css  light.css
dash_ui_kit/assets/utilities/: borders.css  colors.css  effects.css  layout.css  position.css  sizing.css  spacing.css  states.css  typography.css
dash_ui_kit/components/: __init__.py  badge.py  button.py  card.py  input.py  select.py
dash_ui_kit/themes/: __init__.py  default.py
dash_ui_kit/utils/: __init__.py  classnames.py  types.py
docs/: api-reference.md  index.md
docs/components/: badge.md  button.md  card.md  input.md  overview.md  select.md
docs/examples/: dashboard.md  data-tables.md  forms.md
docs/getting-started/: installation.md  migration.md  quick-start.md
docs/theming/: css-variables.md  customization.md  dark-mode.md
docs/utilities/: borders.md  colors.md  effects.md  layout.md  overview.md  spacing.md  typography.md
examples/: basic_usage.py  dashboard.py  forms.py
scripts/: build_css.py  generate_utilities.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_badge.py  test_button.py  test_card.py  test_input.py  test_select.py  test_utils.py
